# detect_sleep_states

./: .gitignore  discovery.ipynb  pyproject.toml
detect_sleep_states/: CNN_1D.py  CNN_1D_partitioned.py  data.py  evaluation.py  import_data.py  playground.py  run.py
