[tool.poetry]
name = "detect-sleep-states"
version = "0.1.0"
description = ""
authors = ["Christoph Baldow <christoph.baldow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
pandas = "^2.1.0"
fastparquet = "^2023.8.0"
matplotlib = "^3.7.2"
tqdm = "^4.66.1"
joblib = "^1.3.2"
tensorflow = "^2.13.0"
tensorflow-macos = "^2.13.0"
tensorflow-metal = "^1.0.1"
scikit-learn = "^1.3.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
